# libqzeitgeist

./: CMakeLists.txt  Mainpage.dox  QZeitgeist.pc.in  QZeitgeistConfig.cmake.in  QZeitgeistConfigVersion.cmake.in  QZeitgeistVersion.cmake.in  QtZeitgeist.pc.in  README  main.cpp  org.gnome.zeitgeist.xml-dfeet  test-zeitgeist.cpp  test-zeitgeist.h  types.cpp  types.h
cmake/modules/: QZeitgeistMacros.cmake
debian/: changelog  control  libqzeitgeist-0.install  libqzeitgeist-dev.install  rules
declarative/: CMakeLists.txt  declarativeevent.cpp  declarativeevent.h  declarativelogmodel.cpp  declarativelogmodel.h  declarativesubject.cpp  declarativesubject.h  plugin.cpp  plugin.h  qmldir
demos/: CMakeLists.txt
demos/browser/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
demos/qml/log-viewer/: main.qml
demos/qml/plasma-jumplist/: metadata.desktop
demos/qml/plasma-jumplist/contents/code/: main.qml
demos/simple-list/: CMakeLists.txt  main.cpp
doc/: .gitignore  CMakeLists.txt  Doxyfile.cmake.in
include/: CMakeLists.txt
include/QZeitgeist/: LogBrowser  LogModel  QZeitgeist
include/QtZeitgeist/: CMakeLists.txt  DataSourceRegistry  Interpretation  Manifestation  QtZeitgeist  datasourceregistry.h  log.h  manifestation.h  monitor.h  qtzeitgeist.h
include/QtZeitgeist/DataModel/: CMakeLists.txt  DataSource  TimeRange  datasource.h  event.h  subject.h  timerange.h
scripts/: generate_header.sh  generate_source.sh  onto2cpp.py  qzeitgeist-7-to-8.sh
src/: CMakeLists.txt  datasourceregistry.cpp  datasourceregistry.h  interpretation.h  log.cpp  log.h  logbrowser.cpp  logbrowser.h  logmodel.cpp  logmodel.h  manifestation.h  monitor.cpp  monitor.h  monitor_p.h  qtzeitgeist.cpp  qtzeitgeist.h  qzeitgeist.cpp  qzeitgeist.h  qzeitgeist_version.h.in  refreshjob.cpp  refreshjob.h
src/DataModel/: datasource.cpp  datasource.h  event.cpp  event.h  subject.cpp  subject.h  timerange.cpp  timerange.h
src/_gen/: BlackListInterface  DataSourceInterface  LogInterface  MonitorAdaptor  blacklistinterface.cpp  blacklistinterface.h  datasourceinterface.cpp  datasourceinterface.h  loginterface.cpp  loginterface.h  monitoradaptor.cpp  monitoradaptor.h
src/datamodel/: datasource.cpp  event.cpp  subject.cpp  timerange.cpp
src/dbus-xml/: org.gnome.zeitgeist.Blacklist.xml  org.gnome.zeitgeist.DataSourceRegistry.xml  org.gnome.zeitgeist.Index.xml  org.gnome.zeitgeist.Log.xml  org.gnome.zeitgeist.Monitor.xml
tests/: CMakeLists.txt
tests/datasourceregistry/: CMakeLists.txt  test-dsr.cpp  test-dsr.h
tests/log/: CMakeLists.txt  test-log.cpp  test-log.h
xml/: org.gnome.zeitgeist.DataSourceRegistry.xml  org.gnome.zeitgeist.Log.xml  org.gnome.zeitgeist.Monitor.xml
